style: fix overflowing unbreaking word

--- a/assets/styles/pages/_post.scss
+++ b/assets/styles/pages/_post.scss
@@ -17,6 +17,7 @@
 		min-width: 0;
 		margin-top: 0;
 		list-style: circle;
+		word-break: break-word;
 	}
 
 	&__date {
